Working buttons and memory game - LOOKS BAD

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
   <div class="header"></div>
-  <div class="app" id="testapp1"></div>
-  <div class="app" id="testapp2"></div>
-  <div class="app" id="testapp3"></div>
+  <div class="body"></div>
   <div class="footer"></div>
   <script type="module" src="./js/index.js"></script>
 </body>
