--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
   <div class="body"></div>
   <div class="footer"></div>
   <script type="module" src="./js/index.js"></script>
+  <p>Emma is cute and I love her! ^.^</p>
 </body>
 </html>
